OpenGL Render fails on Intel-4600, with Anti-aliasing #46496

Closed
opened 2015-10-15 19:00:26 +02:00 by Aaron Carlisle · 31 comments
Member

System Information
Windows 8.0
Intel HD 4600

Blender Version
Broken: Latest Master 2746bbe
Worked: before 53d73c51a7

Short description of error
OpenGL Render fails giving a transperent image and a white image when running blender.exe -d. With blender.exe -d I get:

C:\b\slave_cmake_x64_vc12\win64_cmake_vc2013\blender.git\source\blender\gpu\intern\gpu_extensions.c(1595): ``Read Multi-Sample Pixels'' -> GL Error (0x0502 - GL_INVALID_OPERATION): Invalid Operation

This only happens with anti-aliasing.

Exact steps for others to reproduce the error
Open GL render default scene

**System Information** Windows 8.0 Intel HD 4600 **Blender Version** Broken: Latest Master 2746bbe Worked: before 53d73c51a7 **Short description of error** OpenGL Render fails giving a transperent image and a white image when running `blender.exe -d`. With `blender.exe -d` I get: ``` C:\b\slave_cmake_x64_vc12\win64_cmake_vc2013\blender.git\source\blender\gpu\intern\gpu_extensions.c(1595): ``Read Multi-Sample Pixels'' -> GL Error (0x0502 - GL_INVALID_OPERATION): Invalid Operation ``` This only happens with anti-aliasing. **Exact steps for others to reproduce the error** Open GL render default scene
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Aaron Carlisle 2015-10-15 19:00:26 +02:00
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Do you have multisampling enabled maybe?

Do you have multisampling enabled maybe?
Author
Member

Yes, and to be more precise about the report I get a transparent image. OpenGL version 4.0

Yes, and to be more precise about the report I get a transparent image. OpenGL version 4.0

@Blendify, since you do many bug reports (which is good!), please try get into habit of including useful info.

  • Did this ever work? (try older versions)
  • Do simple cases work? (rendering default scene: 512x512, no Anti-Aliasing).
  • Are there any error messages in the console? (if so attach as txt)

note that off-screen renders aren't guaranteed to work, The graphics card may not support some off-screen buffer options we request, so this could be a case of having to disable some option, or the graphics card driver may even have a bug.

In the past Intel cards have had issues with off-screen rendering, though more recently I've found it worked fine.

@Blendify, since you do many bug reports (which is good!), please try get into habit of including useful info. - Did this ever work? *(try older versions)* - Do simple cases work? (rendering default scene: 512x512, no Anti-Aliasing). - Are there any error messages in the console? (if so attach as txt) note that off-screen renders aren't guaranteed to work, The graphics card may not support some off-screen buffer options we request, so this could be a case of having to disable some option, or the graphics card driver may even have a bug. In the past Intel cards have had issues with off-screen rendering, though more recently I've found it worked fine.
Author
Member
  • Yes a couple of days ago it worked.
  • I tested the default scene I get transparent image.
  • Error message:
C:\b\slave_cmake_x64_vc12\win64_cmake_vc2013\blender.git\source\blender\gpu\intern\gpu_extensions.c(1595): ``Read Multi-Sample Pixels'' -> GL Error (0x0502 - GL_INVALID_OPERATION): Invalid Operation
  • Turning off Multisample still fails.

  • With Blender.exe -d I get a White frame and not a transparent frame

- Yes a couple of days ago it worked. - I tested the default scene I get transparent image. - Error message: ``` C:\b\slave_cmake_x64_vc12\win64_cmake_vc2013\blender.git\source\blender\gpu\intern\gpu_extensions.c(1595): ``Read Multi-Sample Pixels'' -> GL Error (0x0502 - GL_INVALID_OPERATION): Invalid Operation ``` - Turning off Multisample still fails. - With `Blender.exe -d` I get a White frame and not a transparent frame

This must be caused by 53d73c51a7

This code does check if multi-sample FBO's are supported, but there could be some missing check, or even a bug in the driver.

I've also tested this on an Intel HD Graphics 4600 on Linux, and it works properly.

Can you disable Anti-Aliasing from the render panel? This should work since it wont use the new code from the recent commit.

This must be caused by 53d73c51a7 This code does check if multi-sample FBO's are supported, but there could be some missing check, or even a bug in the driver. I've also tested this on an Intel HD Graphics 4600 on Linux, and it works properly. Can you disable Anti-Aliasing from the render panel? This should work since it wont use the new code from the recent commit.
Author
Member

It works when disabling Anti-Aliasing

It works when disabling Anti-Aliasing
Campbell Barton changed title from OpenGL Render fails to OpenGL Render fails on Intel-4600, with Anti-aliasing 2015-10-16 18:20:58 +02:00

@Blendify, do you have a developer environment setup?

It would help if you could test this with this patch: P271

@Blendify, do you have a developer environment setup? It would help if you could test this with this patch: [P271](https://archive.blender.org/developer/P271.txt)
Author
Member

No I do not

No I do not
Author
Member

Is Cuda required for compiling

Is Cuda required for compiling

No, you can disable every WITH_ option, except for WITH_PYTHON, for quick builds.

No, you can disable every `WITH_` option, except for `WITH_PYTHON`, for quick builds.
Author
Member

I don't think it is possible for me to set up a build environment ATM MSVC will take more time then I have

I don't think it is possible for me to set up a build environment ATM MSVC will take more time then I have

Added subscriber: @KINjO

Added subscriber: @KINjO

Added subscriber: @Tunge

Added subscriber: @Tunge

Im on osx 10.6.8 Ati HD 2400 Imac...
OpenGLl AntiAliasing doesn't work anymore!

Im on osx 10.6.8 Ati HD 2400 Imac... OpenGLl AntiAliasing doesn't work anymore!
Campbell Barton was unassigned by Aaron Carlisle 2015-10-18 18:49:24 +02:00
Aaron Carlisle self-assigned this 2015-10-18 18:49:24 +02:00
Author
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Aaron Carlisle removed their assignment 2015-10-18 18:53:31 +02:00
Campbell Barton was assigned by Aaron Carlisle 2015-10-18 18:53:31 +02:00
Author
Member

I think I might be doing something wrong when I apply the patch:

C:\Users\Aaron\BlenderDev\blender>git apply C:\Users\Aaron\Desktop\MSAA.diff
C:\Users\Aaron\Desktop\MSAA.diff:10: trailing whitespace.
GPU_ASSERT_NO_GL_ERRORS("MSAA");
C:\Users\Aaron\Desktop\MSAA.diff:17: trailing whitespace.
GPU_ASSERT_NO_GL_ERRORS("MSAA");
C:\Users\Aaron\Desktop\MSAA.diff:19: trailing whitespace.
GPU_ASSERT_NO_GL_ERRORS("MSAA");
C:\Users\Aaron\Desktop\MSAA.diff:22: trailing whitespace.
GPU_ASSERT_NO_GL_ERRORS("MSAA");
C:\Users\Aaron\Desktop\MSAA.diff:30: trailing whitespace.
GPU_ASSERT_NO_GL_ERRORS("MSAA");
fatal: corrupt patch at line 68

C:\Users\Aaron\BlenderDev\blender>
I think I might be doing something wrong when I apply the patch: ``` C:\Users\Aaron\BlenderDev\blender>git apply C:\Users\Aaron\Desktop\MSAA.diff C:\Users\Aaron\Desktop\MSAA.diff:10: trailing whitespace. GPU_ASSERT_NO_GL_ERRORS("MSAA"); C:\Users\Aaron\Desktop\MSAA.diff:17: trailing whitespace. GPU_ASSERT_NO_GL_ERRORS("MSAA"); C:\Users\Aaron\Desktop\MSAA.diff:19: trailing whitespace. GPU_ASSERT_NO_GL_ERRORS("MSAA"); C:\Users\Aaron\Desktop\MSAA.diff:22: trailing whitespace. GPU_ASSERT_NO_GL_ERRORS("MSAA"); C:\Users\Aaron\Desktop\MSAA.diff:30: trailing whitespace. GPU_ASSERT_NO_GL_ERRORS("MSAA"); fatal: corrupt patch at line 68 C:\Users\Aaron\BlenderDev\blender> ```

In #46496#342307, @Blendify wrote:
I think I might be doing something wrong when I apply the patch:

C:\Users\Aaron\BlenderDev\blender>git apply C:\Users\Aaron\Desktop\MSAA.diff
C:\Users\Aaron\Desktop\MSAA.diff:10: trailing whitespace.
GPU_ASSERT_NO_GL_ERRORS("MSAA");
C:\Users\Aaron\Desktop\MSAA.diff:17: trailing whitespace.
GPU_ASSERT_NO_GL_ERRORS("MSAA");
C:\Users\Aaron\Desktop\MSAA.diff:19: trailing whitespace.
GPU_ASSERT_NO_GL_ERRORS("MSAA");
C:\Users\Aaron\Desktop\MSAA.diff:22: trailing whitespace.
GPU_ASSERT_NO_GL_ERRORS("MSAA");
C:\Users\Aaron\Desktop\MSAA.diff:30: trailing whitespace.
GPU_ASSERT_NO_GL_ERRORS("MSAA");
fatal: corrupt patch at line 68

C:\Users\Aaron\BlenderDev\blender>

http://wiki.blender.org/index.php/Dev:Doc/Tools/Patches

for git diffs

patch -p1 -R < some-new-feature.diff

> In #46496#342307, @Blendify wrote: > I think I might be doing something wrong when I apply the patch: > ``` > C:\Users\Aaron\BlenderDev\blender>git apply C:\Users\Aaron\Desktop\MSAA.diff > C:\Users\Aaron\Desktop\MSAA.diff:10: trailing whitespace. > GPU_ASSERT_NO_GL_ERRORS("MSAA"); > C:\Users\Aaron\Desktop\MSAA.diff:17: trailing whitespace. > GPU_ASSERT_NO_GL_ERRORS("MSAA"); > C:\Users\Aaron\Desktop\MSAA.diff:19: trailing whitespace. > GPU_ASSERT_NO_GL_ERRORS("MSAA"); > C:\Users\Aaron\Desktop\MSAA.diff:22: trailing whitespace. > GPU_ASSERT_NO_GL_ERRORS("MSAA"); > C:\Users\Aaron\Desktop\MSAA.diff:30: trailing whitespace. > GPU_ASSERT_NO_GL_ERRORS("MSAA"); > fatal: corrupt patch at line 68 > > C:\Users\Aaron\BlenderDev\blender> > ``` http://wiki.blender.org/index.php/Dev:Doc/Tools/Patches # for git diffs patch -p1 -R < some-new-feature.diff

Bug also confirmed in my system.
Windows 10 x64
Intel Baytrail

system-info.txt

After applying the patch and recompile, OpenGL render with antialiasing is still not working.

Bug also confirmed in my system. Windows 10 x64 Intel Baytrail [system-info.txt](https://archive.blender.org/developer/F245811/system-info.txt) After applying the patch and recompile, OpenGL render with antialiasing is still not working.

@KINjO, The patch is not intended to fix anything. It is to give the exact line that fails.

Could you paste in the text from Blenders console?
https://www.blender.org/manual/interface/window_system/console_window.html?#ms-windows

@KINjO, The patch is not intended to fix anything. It is to give the exact line that fails. Could you paste in the text from Blenders console? https://www.blender.org/manual/interface/window_system/console_window.html?#ms-windows

This comment was removed by @ideasman42

*This comment was removed by @ideasman42*

In #46496#342367, @ideasman42 wrote:
@KINjO, The patch is not intended to fix anything. It is to give the exact line that fails.

Could you paste in the text from Blenders console?
https://www.blender.org/manual/interface/window_system/console_window.html?#ms-windows

Oops sorry...

This is the output from the patched version:

C:\Users\oscar\Documents\Compile\Blender\blender\source\blender\gpu\intern\gpu_e
xtensions.c:1566: ``MSAA'' -> GL Error (0x0502 - GL_INVALID_OPERATION): Invalid
Operation
Evaluate all animation - 186.000000
        No Actions, so no animation needs to be evaluated...

And this output is from the buildbot version

C:\b\slave_cmake_x64_vc12\win64_cmake_vc2013\blender.git\source\blender\gpu\inte
rn\gpu_extensions.c:1595: ``Read Multi-Sample Pixels'' -> GL Error (0x0502 - GL_
INVALID_OPERATION): Invalid Operation
Evaluate all animation - 186.000000
        No Actions, so no animation needs to be evaluated...
> In #46496#342367, @ideasman42 wrote: > @KINjO, The patch is not intended to fix anything. It is to give the exact line that fails. > > Could you paste in the text from Blenders console? > https://www.blender.org/manual/interface/window_system/console_window.html?#ms-windows Oops sorry... **This is the output from the patched version:** ``` C:\Users\oscar\Documents\Compile\Blender\blender\source\blender\gpu\intern\gpu_e xtensions.c:1566: ``MSAA'' -> GL Error (0x0502 - GL_INVALID_OPERATION): Invalid Operation Evaluate all animation - 186.000000 No Actions, so no animation needs to be evaluated... ``` **And this output is from the buildbot version** ``` C:\b\slave_cmake_x64_vc12\win64_cmake_vc2013\blender.git\source\blender\gpu\inte rn\gpu_extensions.c:1595: ``Read Multi-Sample Pixels'' -> GL Error (0x0502 - GL_ INVALID_OPERATION): Invalid Operation Evaluate all animation - 186.000000 No Actions, so no animation needs to be evaluated... ```

@KINjO,
Thanks for the feedback, the line that fails is:

glBindFramebuffer(GL_DRAW_FRAMEBUFFER, fbo_blit);


Added check for GLEW_EXT_framebuffer_blit, 67e1c97350

Please check if this resolves the issue.

@KINjO, Thanks for the feedback, the line that fails is: `glBindFramebuffer(GL_DRAW_FRAMEBUFFER, fbo_blit);` ---- Added check for `GLEW_EXT_framebuffer_blit`, 67e1c97350 Please check if this resolves the issue.

@ideasman42,

Tested with the latest buildbot (67e1c97) still not working, the render outputs a blank image.

This is the console output:

PS C:\Program Files\Blender> .\blender-app.exe -d --factory-startup

.\blender-app.exe : C:\b\slave_cmake_x64_vc12\win64_cmake_vc2013\blender.git\source\bl
ender\gpu\intern\gpu_extensions.c:1599: ``Read Multi-Sample Pixels'' -> GL Error 
(0x0502 - GL_INVALID_OPERATION): Invalid Operation
En línea: 1 Carácter: 1
+ .\blender-app.exe -d  --factory-startup
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (C:\b\slave_cmak...valid Operation:String 
   ) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
IDProperty group len: 128 0000000E8C181DF8
uiAfterFunc len: 256 0000000E8BDFAB68
@ideasman42, Tested with the latest buildbot (67e1c97) still not working, the render outputs a blank image. This is the console output: **PS C:\Program Files\Blender> .\blender-app.exe -d --factory-startup** ``` .\blender-app.exe : C:\b\slave_cmake_x64_vc12\win64_cmake_vc2013\blender.git\source\bl ender\gpu\intern\gpu_extensions.c:1599: ``Read Multi-Sample Pixels'' -> GL Error (0x0502 - GL_INVALID_OPERATION): Invalid Operation En línea: 1 Carácter: 1 + .\blender-app.exe -d --factory-startup + ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ + CategoryInfo : NotSpecified: (C:\b\slave_cmak...valid Operation:String ) [], RemoteException + FullyQualifiedErrorId : NativeCommandError IDProperty group len: 128 0000000E8C181DF8 uiAfterFunc len: 256 0000000E8BDFAB68 ```

@KINjO, (and anyone else who can redo the failure).
Please attach system-info.txt - https://www.blender.org/manual/getting_started/help.html#system-info

@KINjO, (and anyone else who can redo the failure). Please attach `system-info.txt` - https://www.blender.org/manual/getting_started/help.html#system-info

Hi Campbell, my system-info is already posted here, tell me if you need anything else.

In #46496#342313, @KINjO wrote:
Bug also confirmed in my system.
Windows 10 x64
Intel Baytrail

system-info.txt

After applying the patch and recompile, OpenGL render with antialiasing is still not working.

Hi Campbell, my system-info is already posted here, tell me if you need anything else. > In #46496#342313, @KINjO wrote: > Bug also confirmed in my system. > Windows 10 x64 > Intel Baytrail > > [system-info.txt](https://archive.blender.org/developer/F245811/system-info.txt) > > After applying the patch and recompile, OpenGL render with antialiasing is still not working.
Author
Member

Here is mine system-info.txt

Here is mine [system-info.txt](https://archive.blender.org/developer/F246002/system-info.txt)

This issue was referenced by af23b09e72

This issue was referenced by af23b09e72ed6ed2bc68f13a26ac879e0708dbef

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46496
No description provided.