Fix T46496: GL Render fails w/ Anti-Aliasing

Needed to check if scaled-multisample-blit is supported.